Adjust news and tweets section to make sure contrast requirements are met.

--- a/css/main.css
+++ b/css/main.css
@@ -2596,13 +2596,13 @@ footer {
     .home-thirds .third.news {
       background-color: #fee9cd; }
       .home-thirds .third.news h2, .home-thirds .third.news button {
-        background-color: #df8106; }
+        background-color: #ad6505; }
       .home-thirds .third.news h2:before {
         background-image: url(../img/icon-news.png); }
     .home-thirds .third.tweets {
       background-color: #e0eed1; }
       .home-thirds .third.tweets h2, .home-thirds .third.tweets button {
-        background: #7DB241; }
+        background: #496726; }
       .home-thirds .third.tweets h2:before {
         background-image: url(../img/icon-tweets.png); }
     .home-thirds .third h2 {
